--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "sweetalert2": "^11.6.15",
     "vite": "^3.2.4"
   },
   "devDependencies": {
